apps/vatsim-activity/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vatsim-activity
spec:
  selector:
    matchLabels:
      app: vatsim-activity
  template:
    metadata:
      labels:
        app: vatsim-activity
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
      - name: vatsim-activity
        image: ghcr.io/indy-center/vatsim-activity:latest
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            cpu: 100m 
            memory: 256Mi
          limits:
            cpu: 200m
            memory: 512Mi
