apps/vatsim-activity/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vatsim-activity
spec:
  selector:
    app: vatsim-activity
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
