apps/vatsim-activity/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vatsim-activity
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - activity.zid-internal.com
      secretName: vatsim-activity-tls
  rules:
    - host: activity.zid-internal.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vatsim-activity
                port:
                  number: 80
